Implements Liskov Substitution Principle